--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Galeria</string>
     <string name="action_settings">Settings</string>
-    <string name="titulo">Lorem Ipsum</string>
+    <string name="titulo">Nombre de la imagen</string>
     <string name="titulolista">Lo que sea</string>
+    <string name="descripcion">Descripción</string>
+    <string name="comentarios">Comentarios</string>
+    <string name="agreguecomentario">Agregue su comentario</string>
+    <string name="agregar">Agregar</string>
+    <string name="detalleimagen">Detalle de Imagen</string>
 </resources>
