arreglando la barra

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="agreguecomentario">Agregue su comentario</string>
     <string name="agregar">Agregar</string>
     <string name="detalleimagen">Detalle de Imagen</string>
+    <string name="app_detalle">Detalle de la imagen</string>
 </resources>
